--- a/experiments/hierarchical/full_mlp_share_critic.yaml
+++ b/experiments/hierarchical/full_mlp_share_critic.yaml
@@ -64,7 +64,7 @@ tune_config:
         config: *choose_action_agent_params
   log_level: INFO
   framework: torch
-  seed : !choice [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+  seed : 0 # !choice [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
   lr: 0.0005 #!choice [0.0001, 0.001] #!choice [0.001, 0.0001] #tune.grid_search([1e-3 1e-41e-5])
   kl_coeff: 0.3 #!choice [0.1, 0.2,0.4]  #!choice [0, 0.3] # !choice [0.15, 0.3, 0.2, 0.25]
   clip_param: 0.5 #!choice [0.4,0.5] #!choice [0.2, 0.3] #!choice [0.2,0.3]
